fix overflow tela

--- a/estilo.css
+++ b/estilo.css
@@ -145,6 +145,7 @@ button:hover {
   opacity: 1;
   transition: opacity 0.5s;
 
+  overflow: auto;
 }
 
 .bloco {
